--- a/templates/base.html
+++ b/templates/base.html
@@ -84,7 +84,7 @@
               </a>
          
               <!-- Everything you want hidden at 940px or less, place within here -->
-              <div class="nav-collapse collapse">
+              <div class="nav-collapse">
               <ul class="nav ">
                 <li><a href="/"><i class="icon-home icon-white"></i> Inicio</a></li>
                 <li><a href="/notas"><i class="icon-leaf icon-white"></i> Notas</a></li>
