--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <div class="span4 tablet-noticia">
+    <div class="span4 news-desc tablet-noticia">
     Fortaleciendo la alianza entre las organizaciones socias del programa "Medios de vida sostenible" de CAFOD en Centroamérica, para mejorar el aprendizaje e impacto de los proyectos.
     <br><br>
     <a class="btn leermas" href="">Leer mas..</a>
