--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,10 @@
     <link href="/files/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <link type="text/css" rel="stylesheet"  href="/files/css/cafod.css">
     <link type="text/css" rel="stylesheet"  href="/files/css/newcafod.css">
+    <link href="//fonts.googleapis.com/css?family=Droid+Serif:400italic,400,700italic,700" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+
+
   {#{% endcompress %}#}
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
    {#{% compress js %}#}
