--- a/templates/agendas/agenda_list_public.html
+++ b/templates/agendas/agenda_list_public.html
@@ -1,4 +1,4 @@
-{% extends "baseinterna.html" %}ß
+{% extends "base.html" %}ß
 {% block extra_js %}
 <link href="/files/css/fullcalendar.css" rel="stylesheet" type="text/css">
 <link href="/files/css/cupertino/theme.css" rel="stylesheet" type="text/css">
