--- a/templates/baseinterna.html
+++ b/templates/baseinterna.html
@@ -11,6 +11,7 @@
   {% compress css %}
     <link type="text/css" rel="stylesheet"  href="/files/bootstrap/css/bootstrap.min.css" >
     <link type="text/css" rel="stylesheet"  href="/files/css/cafod.css">
+    <link type="text/css" rel="stylesheet"  href="/files/css/newcafod.css">
     <link type="text/css" rel="stylesheet"  href="/files/css/jquery.fancybox.css" >
   {% endcompress %}
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
