--- a/templates/notas/notas_detail.html
+++ b/templates/notas/notas_detail.html
@@ -1,5 +1,5 @@
 
-  {% extends "baseinterna.html" %}
+  {% extends "base.html" %}
 {% block extra_js%}
 <script type="text/javascript" src="/files/js/jquery.bxSlider.min.js"></script>
 <script type="text/javascript">
