--- a/templates/contrapartes/contraparte_detail.html
+++ b/templates/contrapartes/contraparte_detail.html
@@ -1,4 +1,4 @@
-{% extends "baseinterna.html" %}
+{% extends "base.html" %}
 {% block title %}{{contra.nombre}}{% endblock %}
 {% block extra_js %}
     <script type="text/javascript">
