--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -1,4 +1,4 @@
-{% extends "baseinterna.html" %}
+{% extends "base.html" %}
 
 {% block title %} 
 	{{ flatpage.title }}
@@ -22,7 +22,9 @@
       <div class="container">
           <div class="row">
             <div class="span12">
+              <div class="acerca">
                 {{ flatpage.content }}<br><br>
+              </div>
             </div>
          </div>
     </div>
