--- a/static_media/files/css/newcafod.css
+++ b/static_media/files/css/newcafod.css
@@ -117,6 +117,7 @@ position:absolute;
 	background-color: #BE9661 !important;
 	color: white;
 	background-image:-webkit-linear-gradient(top, #BE9661, #BE9661);
+	background-image:-moz-linear-gradient(top, #BE9661, #BE9661);
 	text-shadow:none;
 	font-size: 12px;
 	font-weight: bold;
@@ -129,6 +130,7 @@ position:absolute;
 }
 .slider{
 	margin-left: 5em;
+	margin-top: 2em;
 }
 
 p.description_content-slider{
