--- a/static_media/files/css/newcafod.css
+++ b/static_media/files/css/newcafod.css
@@ -1,4 +1,6 @@
-
+html * {
+	font-family: "Droid Serif" !important;
+}
 /*---------------------------------------------Nuevo diseno----------------------------------------------------------------*/
 body{
 	font-family: "Droid Serif" !important;
