--- a/templates/privados/estadisticas.html
+++ b/templates/privados/estadisticas.html
@@ -12,7 +12,7 @@ $(function () {
             plotShadow: false
         },
         title: {
-            text: 'Número de noticias por organización'
+            text: 'Noticias por organización'
         },
         tooltip: {
             pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
