reparando bug de slider notas y fecha nota

--- a/static_media/files/css/newcafod.css
+++ b/static_media/files/css/newcafod.css
@@ -196,6 +196,10 @@ p.description_content-slider{
 		margin-left: 0em !important;
 
 	}
+	#grisheader{
+		background:#d9d9d5;
+		height:330px
+	}
 	.evento{
 		width: 160px;
 	}
