--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
     <div class="span4 tablet-noticia">  
         <div class="info-new">
           <div class="up-event-user">{{nota.user.first_name}} {{nota.user.last_name}}</div>
-          <div class="up-event-date">{{nota.fecha|date:"M t, Y"}}</div>
+          <div class="up-event-date">{{nota.fecha|date:"M d, Y"}}</div>
         
         </div>
     </div>
