cambiando correo de soporte

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -49,8 +49,8 @@
 					<p>Carlos Rocha
 					<b>carlos@simas.org.ni</b></p>
 
-					<p>Martha Olivera
-					<b>martha@simas.org.ni</b></p>
+					<p>Martin Cuadra
+					<b>manejo-informacion@simas.org.ni</b></p>
 
 					<p>Winston Berrios
 					<b>wberrios@cafod.org.uk </b></p>
